--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "init-db": "node src/database/migrations/init-db.js",
-    "migration:add-role": "node src/database/migrations/add-role-to-users.js"
+    "migration:add-role": "node src/database/migrations/add-role-to-users.js",
+    "migration:add-email-tables": "node src/database/migrations/add-email-tables.js",
+    "migration:add-deleted-at": "node src/database/migrations/add-deleted-at-columns.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -20,6 +22,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^3.6.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
     "sequelize": "^6.25.3",
