--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "init-db": "node src/database/migrations/init-db.js",
     "migration:add-role": "node src/database/migrations/add-role-to-users.js",
     "migration:add-email-tables": "node src/database/migrations/add-email-tables.js",
-    "migration:add-deleted-at": "node src/database/migrations/add-deleted-at-columns.js"
+    "migration:add-deleted-at": "node src/database/migrations/add-deleted-at-columns.js",
+    "migration:add-appointment-type": "node src/database/migrations/add-appointment-type.js",
+    "migration:fix-appointment-type": "node src/database/migrations/fix-appointment-type.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
